<resources>
    <string name="app_name">HealthLevel</string>
    <string name="add_task">Добавить задачу</string>
    <string name="added_task">Добавление задачи</string>
    <string name="task_name">Название задачи:</string>
    <string name="task_type">Тип задачи:</string>
    <string name="repeat_time">Частота выполнения:</string>
    <string name="close">Закрыть</string>
    <string name="add">Добавить</string>
    <string name="tasks">Задачи</string>
    <string name="achievements">Достижения</string>
</resources>
