<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="model" type="com.example.healthlevel.models.CreateTaskModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.CreateTaskActivity">

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="22sp"
                android:text="@string/added_task"
                android:gravity="center_horizontal"
                android:textColor="@color/White"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/taskNameLabel"
                style="@style/CreateTaskTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                app:layout_constraintTop_toBottomOf="@id/title"
        />

        <EditText
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textColor="@color/Black"
                android:singleLine="true"
                android:text="@={model.taskThemeText}"
                app:layout_constraintTop_toBottomOf="@id/taskNameLabel"
        />

        <TextView
                android:id="@+id/taskTypeLabel"
                style="@style/CreateTaskTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/task_type"
                app:layout_constraintTop_toTopOf="@id/taskTypeSpinner"
                app:layout_constraintBottom_toBottomOf="@id/taskTypeSpinner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/glTaskType"
        />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTaskType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"
        />

        <TextView
                android:id="@+id/taskTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/CreateTaskTextView"
                android:background="@drawable/spinner"
                android:text="@{model.taskTypeText}"
                android:onClick="@{() -> model.taskTypeClick()}"
                app:layout_constraintLeft_toRightOf="@id/glTaskType"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taskName"
        />

        <TextView
                android:id="@+id/repeatTimeLabel"
                style="@style/CreateTaskTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_time"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/taskTypeSpinner"
        />

        <TextView
                android:id="@+id/repeatTimeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CreateTaskTextView"
                android:background="@drawable/spinner"
                android:text="@{model.taskRepeatTimeText}"
                android:onClick="@{() -> model.taskRepeatTimeClick()}"
                app:layout_constraintTop_toBottomOf="@id/repeatTimeLabel"
        />

        <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/DarkGreen"
                android:layout_margin="10dp"
                android:text="@string/add"
                android:textColor="@color/White"
                android:onClick="@{() -> model.saveButtonClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/closeButton"
        />

        <Button
                android:id="@+id/closeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/DarkBlue"
                android:layout_margin="10dp"
                android:text="@string/close"
                android:textColor="@color/White"
                android:onClick="@{() -> model.closeButtonClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/saveButton"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>