<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="model" type="com.example.healthlevel.models.MainMenuModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/titleMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
        >


            <TextView
                    android:id="@+id/title"
                    style="@style/CreateTaskTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks"
                    android:textSize="22sp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:textColor="@color/White"
                    app:layout_constraintTop_toTopOf="@id/userIcon"
                    app:layout_constraintBottom_toBottomOf="@id/userIcon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/userIcon"
            />

            <ImageView
                    android:id="@+id/userIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/boy_32"
                    android:layout_margin="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:adapter="@{model.adapter}"
                android:layoutManager="@{model.layoutManager}"
                android:background="@drawable/logo"
                app:layout_constraintTop_toBottomOf="@id/titleMenu"
                app:layout_constraintBottom_toTopOf="@id/createTask"
        />

        <Button
                android:id="@+id/createTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="@string/add_task"
                android:layout_margin="10dp"
                android:onClick="@{() -> model.createTaskClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/openAchievements"
        />

        <Button
                android:id="@+id/openAchievements"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="@string/achievements"
                android:layout_margin="10dp"
                android:onClick="@{() -> model.openAchievementsClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/createTask"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>